--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.1",
     "@mui/material-nextjs": "^5.15.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.2"
   },
   "devDependencies": {
     "@types/node": "^20",
