--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.1",
     "@mui/material-nextjs": "^5.15.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2"
+    "react-hook-form": "^7.49.2",
+    "react-redux": "^9.0.4"
   },
   "devDependencies": {
     "@types/node": "^20",
