--- a/package.json
+++ b/package.json
@@ -1,33 +1,36 @@
 {
-  "name": "churn-prediction-ui",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@mui/lab": "^5.0.0-alpha.157",
-    "@mui/material": "^5.15.1",
-    "@mui/material-nextjs": "^5.15.0",
-    "@reduxjs/toolkit": "^2.0.1",
-    "next": "14.0.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "react-redux": "^9.0.4"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.3",
-    "typescript": "^5"
-  }
+	"name": "churn-prediction-ui",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"generate-client": "openapi --input http://127.0.0.1:8000/openapi.json --output ./src/client --client axios --useOptions --useUnionTypes"
+	},
+	"dependencies": {
+		"@emotion/cache": "^11.11.0",
+		"@emotion/react": "^11.11.3",
+		"@emotion/styled": "^11.11.0",
+		"@mui/lab": "^5.0.0-alpha.157",
+		"@mui/material": "^5.15.1",
+		"@mui/material-nextjs": "^5.15.0",
+		"@reduxjs/toolkit": "^2.0.1",
+		"axios": "^1.6.3",
+		"next": "14.0.3",
+		"react": "^18",
+		"react-dom": "^18",
+		"react-hook-form": "^7.49.2",
+		"react-redux": "^9.0.4"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"eslint": "^8",
+		"eslint-config-next": "14.0.3",
+		"openapi-typescript-codegen": "^0.25.0",
+		"typescript": "^5"
+	}
 }
